Fixed z-index on staff profile that showed over top of search overlay

--- a/resources/assets/sass/components/_ki-staff-profile.scss
+++ b/resources/assets/sass/components/_ki-staff-profile.scss
@@ -10,7 +10,7 @@
      top: 0;
     }
     .avatar {
-        z-index: 22;
+        z-index: 0;
         img {
             border-radius: 50%;
             border: 5px solid rgba(255,255,255,0.5);
